--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,34 @@
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadd1d;
+  border-radius: 5px;
+}
 h1 {
-  color: blue;
+  color: #876587;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: 100;
+  height: 27.7778px;
+  line-height: 28.8px;
+  text-align: left;
+  margin-bottom: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  color: #320923;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  margin: 0;
+  padding: 0;
 }
