--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,19 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: red;
+  padding: 0px;
+}
+
 .weather-app {
   max-width: 600px;
   margin: 30px auto;
   padding: 20px;
-  border: 1px solid #dadd1d;
+  border: 3px solid #d4af37;
   border-radius: 5px;
 }
+
 h1 {
-  color: #876587;
+  color: #b76e79;
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
@@ -14,12 +21,15 @@ h1 {
   height: 27.7778px;
   line-height: 28.8px;
   text-align: left;
-  margin-bottom: 0;
+}
+h6 {
+  margin: 0px;
+  padding-top: 10px;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
+  margin: 10px;
+  padding: 0px;
 }
 
 li {
@@ -29,6 +39,30 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
+}
+
+.wrapper {
+  max-width: 600px;
+  margin: 10px auto;
+  padding: 0px;
+}
+
+#submitButton {
+  text-align: center;
+  background-color: #5585b5;
+  border-radius: 25px;
+  color: #fff;
+  font-weight: bold;
+  width: 200px;
+  margin-left: auto;
+  margin-right: 1px;
+}
+.searchbox {
+  width: 200px;
+  display: block;
+  text-align: left;
+  margin: 0 auto;
+  border-radius: 1px;
 }
