--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,30 @@ li {
   padding: 0px;
 }
 
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img {
+  margin-right: 5px;
+  float: left;
+  height: 64px;
+  width: 64px;
+}
+
+.weather-temperature strong {
+  color: gray;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 1;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
+  font-weight: normal;
+}
+
 #submitButton {
   text-align: center;
   background-color: #5585b5;
