--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,16 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: red;
   padding: 0px;
+  background: blue;
+}
+
+.background {
+  background-color: #e5e5f7;
+  opacity: 0.8;
+  background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px),
+    radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+  background-size: 20px 20px;
+  background-position: 0 0, 10px 10px;
 }
 
 .weather-app {
@@ -10,6 +19,7 @@ body {
   padding: 20px;
   border: 3px solid #d4af37;
   border-radius: 5px;
+  background: white;
 }
 
 h1 {
@@ -29,7 +39,7 @@ h6 {
 
 ul {
   margin: 10px;
-  padding: 0px;
+  padding-top: 20px;
 }
 
 li {
@@ -39,8 +49,6 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
-  margin: 0px;
-  padding: 0px;
 }
 
 li:first-letter {
@@ -79,8 +87,23 @@ li:first-letter {
 .weather-temperature .active {
   color: gray;
   cursor: default;
+  text-decoration: none;
 }
 
 .weather-temperature .active:hover {
   text-decoration: none;
+}
+
+#fahrenheit-link {
+  text-decoration: none;
+}
+
+#celsius-link {
+  text-decoration: none;
+}
+
+.margin-left {
+  margin-left: 0px;
+  border-left: 0px;
+  padding-left: 0px;
 }
