--- a/src/style.css
+++ b/src/style.css
@@ -107,3 +107,22 @@ li:first-letter {
   border-left: 0px;
   padding-left: 0px;
 }
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-min {
+  opacity: 0.5px;
+}
+
+.weather-forecast-temp {
+  font-size: 13px;
+}
